--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow-bro",
-  "version": "0.0.3-5",
+  "version": "0.0.3-6",
   "description": "You personal flow helper",
   "main": "index.js",
   "author": "Daniel Schmidt <danielmschmidt92@gmail.com>",
@@ -9,6 +9,7 @@
     "flow-bro": "index.js"
   },
   "dependencies": {
+    "cli-table": "^0.3.1",
     "commander": "^2.9.0"
   }
 }
