--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cli-table": "^0.3.1",
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "throttled-promise": "^1.0.1"
   }
 }
