--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow-bro",
-  "version": "0.1.0",
+  "version": "0.2.0-5",
   "description": "You personal flow helper",
   "main": "index.js",
   "author": "Daniel Schmidt <danielmschmidt92@gmail.com>",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cli-table": "^0.3.1",
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "throttled-promise": "^1.0.1"
   }
 }
