--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow-bro",
-  "version": "0.2.1",
+  "version": "0.2.2-16",
   "description": "You personal flow helper",
   "main": "index.js",
   "author": "Daniel Schmidt <danielmschmidt92@gmail.com>",
