--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "author": "Daniel Schmidt <danielmschmidt92@gmail.com>",
   "license": "ISC",
   "repository": "DanielMSchmidt/flow-bro",
+  "scripts": {
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "keywords": [
     "cli",
     "flow",
@@ -23,5 +32,10 @@
     "commander": "^2.9.0",
     "ora": "^1.2.0",
     "throttled-promise": "^1.0.1"
+  },
+  "devDependencies": {
+    "husky": "^0.13.3",
+    "lint-staged": "^3.4.1",
+    "prettier": "^1.3.1"
   }
 }
