add prettier support for different file formats

--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
   "name": "flow-bro",
   "version": "0.4.1",
-  "description": "Your personal flow type helper with features like coverage and watch mode",
+  "description":
+    "Your personal flow type helper with features like coverage and watch mode",
   "main": "index.js",
   "author": "Daniel Schmidt <danielmschmidt92@gmail.com>",
   "license": "ISC",
   "repository": "DanielMSchmidt/flow-bro",
   "scripts": {
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "fmt": "prettier --write **/*.{js,json,css,md}"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.{js,json,css,md}": ["prettier --write", "git add"]
   },
-  "keywords": [
-    "cli",
-    "flow",
-    "flow-type",
-    "coverage",
-    "watch",
-    "helper"
-  ],
+  "keywords": ["cli", "flow", "flow-type", "coverage", "watch", "helper"],
   "bin": {
     "flow-bro": "index.js"
   },
